--- a/TODO
+++ b/TODO
@@ -7,6 +7,17 @@ until it succeeds.
  
 TV4: Stabilt. Den gör en falblack till <program_description> om det inte finns episode_desc eller? du kan skriva upp på din todo då med att om den gör denna fallback, kan vi uppenbarligen inte identifiera ett specifikt avsnitt. då ska episodeid sättas till "0000", en indikation på just detta.
 
+Nonstop: Add actors and directors. Also add season and episode to xmltv.
+		 Actors and directors is built like this: 
+		 ProgrammeSeriesCreditsRole2='Corky St. Clair' ProgrammeSeriesCreditsContact2='Christopher Guest'
+		 ProgrammeSeriesCreditsCredit2='Lead Actor'
+
+		 and Season and episode is at the end of description:: (Säsong 1 avsnitt 19)
+
+Kanal5: They're going to add a line at the end of the docs now. (per programme): S01E19.
+		We should start using that instead, or start using the XML files instead.
+
+
 Use Namespaces for channels.xml? This would make it easy to add more info to channels.xml in the future that can be removed by tv_grab_se_swedb without specific knowledge about the tags.
 
 Eurosport: Subtitles are sometimes empty, sometimes NULL. Should be NULL.
