--- a/TODO
+++ b/TODO
@@ -11,8 +11,10 @@ Nonstop: Add actors and directors. Also add season and episode to xmltv.
 		 Actors and directors is built like this: 
 		 ProgrammeSeriesCreditsRole2='Corky St. Clair' ProgrammeSeriesCreditsContact2='Christopher Guest'
 		 ProgrammeSeriesCreditsCredit2='Lead Actor'
-
 		 and Season and episode is at the end of description:: (Säsong 1 avsnitt 19)
+
+Actors, add a role="" in the actors list?
+
 
 Use Namespaces for channels.xml? This would make it easy to add more info to channels.xml in the future that can be removed by tv_grab_se_swedb without specific knowledge about the tags.
 
